<resources>
    <string name="app_name">Healthcare</string>
    <string name="healthcare">Healthcare</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register_a_new_user">Register a new user</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="lab_tests">Laboratory tests</string>
    <string name="buy_medicine">BUY MEDICINE</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="health_articles">Health articles</string>
    <string name="orders_details">Orders details</string>
    <string name="logout">LOGOUT</string>
    <string name="top_doctors">Top doctors</string>
    <string name="family_physician">FAMILY PHYSICIAN</string>
    <string name="dietician">DIETITIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardiologist">CARDIOLOGIST</string>
    <string name="back">BACK</string>
    <string name="default_value">Default Value</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact number</string>
    <string name="address">Address</string>
    <string name="book_an_appointment">BOOK AN APPOINTMENT</string>
    <string name="select_date">Select Date:</string>
    <string name="select_time">Select Time:</string>
    <string name="fee">Fee</string>
    <string name="default_date">0000/00/00</string>
    <string name="default_time">00:00</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="checkout">CHECKOUT</string>
    <string name="total_cost">Total cost</string>
    <string name="book">BOOK</string>
    <string name="please_enter_all_booking_details">Please enter all booking details</string>
    <string name="pin_code">Pin code</string>
    <string name="articles">Articles</string>
    <string name="lab_test_details">LAB TEST DETAILS</string>
    <string name="buy_medicines">Buy medicines</string>
    <string name="medicine_details">MEDICINE DETAILS</string>
    <string name="items_in_the_cart">ITEMS IN THE CART</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="add_new">ADD NEW</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="update_product">UPDATE PRODUCT</string>
    <string name="delete">DELETE</string>
    <string name="add_new_article">ADD NEW ARTICLE</string>
    <string name="upload_photo">UPLOAD POSTER</string>
    <string name="add_new_speciality">ADD NEW SPECIALITY</string>
    <string name="expirience">Expirience</string>
    <string name="add_new_doctor">ADD NEW DOCTOR</string>
    <string name="delete_specialty">DELETE SPECIALTY</string>
    <string name="no_image">NO IMAGE</string>
    <string name="update_doctor">UPDATE DOCTOR</string>
    <string name="update_article">UPDATE ARTICLE</string>
    <string name="specialties_of_doctors">Specialties of doctors</string>
    <string name="specialty">Specialty</string>
    <string name="lab_tests_up">LAB TESTS</string>
    <string name="health_articles_up">HEALTH ARTICLES</string>
    <string name="orders_details_up">ORDERS DETAILS</string>
</resources>