<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".admin.add.NewArticlesActivity">

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:contentDescription="@string/healthcare"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHealthcare"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/healthcare" />

        <TextView
            android:id="@+id/tvHealthcare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amita"
            android:text="@string/healthcare"
            android:textColor="@color/purple_200"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEATitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans"
        android:text="@string/health_articles"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLayout" />

    <EditText
        android:id="@+id/etEAName"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/tag"
        android:drawablePadding="6dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEATitle" />

    <EditText
        android:id="@+id/etEADescription"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/description"
        android:drawablePadding="6dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEAName" />

    <ImageView
        android:id="@+id/ivEAUpload"
        android:layout_width="220dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/no_image"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEADescription" />

    <Button
        android:id="@+id/btnEAUpload"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="7dp"
        android:text="@string/upload_photo"
        android:fontFamily="@font/noto_sans"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEAUpload" />

    <Button
        android:id="@+id/btnEAUpdate"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/update_article"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="145dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEAUpload" />

    <Button
        android:id="@+id/btnEADelete"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        android:textStyle="bold"
        android:layout_marginStart="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEAUpload" />

    <Button
        android:id="@+id/btnEABack"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEAUpdate" />
</androidx.constraintlayout.widget.ConstraintLayout>